src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AECOM_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AECOM Contact</label>
        <referenceTo>AECOM_Employee__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccountType__c</fullName>
        <formula>TEXT(Account.Type)</formula>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctName__c</fullName>
        <formula>Account.Name</formula>
        <label>AcctName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssignmentUserStatus__c</fullName>
        <label>AssignmentUserStatus</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assistant_2_Email__c</fullName>
        <description>email address for this person&apos;s second assistant</description>
        <inlineHelpText>Enter email address for this person&apos;s secondary assistant</inlineHelpText>
        <label>Assistant 2 Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Assistant_2_Name__c</fullName>
        <description>Contact&apos;s secondary assistant</description>
        <inlineHelpText>Enter name of the contact&apos;s second assistant (only if a name has already been entered in the Assistant field)</inlineHelpText>
        <label>Assistant 2 Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assistant_Email__c</fullName>
        <description>email address for this person&apos;s primary assistant</description>
        <inlineHelpText>Enter email address for this person&apos;s primary assistant</inlineHelpText>
        <label>Assistant Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Asst_2_Phone__c</fullName>
        <description>Second assistant&apos;s phone number</description>
        <inlineHelpText>Enter the telephone number for this person&apos;s secondary assistant</inlineHelpText>
        <label>Asst 2 Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Canada_Opt_in__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check ONLY if this contact has agreed to receive email from AECOM in accordance with Canadian law.</inlineHelpText>
        <label>Canada Opt-in</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Web_Name__c</fullName>
        <description>Name received from the mail server for this Contact. Used if FirstName/LastName can&apos;t be parsed correctly and/or are unknown.</description>
        <label>Case Web Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactID__c</fullName>
        <label>Contact ID</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_1__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Used to check for Accounts with contacts in reporting. Not in use.</description>
        <label>Contact 1</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Fax__c</fullName>
        <description>The fax number for the contact - added so that it doesn&apos;t automatically take fax from Account.</description>
        <label>Contact Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_ID__c</fullName>
        <displayFormat>CON-{0}</displayFormat>
        <label>Contact ID#</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>Used in reporting, to determine number of contacts associated with an account.</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomerAccountSiteID__c</fullName>
        <label>Customer Account Site ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision_making_Role__c</fullName>
        <inlineHelpText>Gatekeepers can’t say ‘yes’ but can say ‘no’. Users are people who are directly involved with or supervise AECOM work.</inlineHelpText>
        <label>Decision-making Role</label>
        <picklist>
            <picklistValues>
                <fullName>Champion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision-maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gatekeeper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_Not_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check box if the contact has indicated that he or she does not want to receive surveys.</inlineHelpText>
        <label>Do Not Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enrollment_Participant__c</fullName>
        <inlineHelpText>Active Enrollment Participant</inlineHelpText>
        <label>Enrollment Participant?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ExpenditureType__c</fullName>
        <label>Expenditure Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDReport__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IDReport</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Import_Source__c</fullName>
        <label>Import Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobName__c</fullName>
        <label>Job Name</label>
        <picklist>
            <picklistValues>
                <fullName>Queen Bee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff Accountant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foreman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carpenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graphic Designer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>JobTitle__c</fullName>
        <label>Job Title</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_ContactID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ContactID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mailings_Other__c</fullName>
        <label>Mailings - Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mailings__c</fullName>
        <label>Mailings</label>
        <picklist>
            <picklistValues>
                <fullName>2011 Americas Client Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012 Americas Client Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013 Americas Client Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada West - BC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada West - Northern Alberta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada West - Southern Alberta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment Announcement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Golf Outing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holiday Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Workshop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Holiday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prairies - MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prairies - SK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ramadan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Show</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Need_to_Know__c</fullName>
        <inlineHelpText>Caution or other short note to other AECOM staff regarding this person</inlineHelpText>
        <label>Need to Know</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <inlineHelpText>Name person prefers to be called</inlineHelpText>
        <label>Nickname</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OracleContactID__c</fullName>
        <externalId>true</externalId>
        <label>Oracle Contact ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OracleCustomerID__c</fullName>
        <formula>Account.OracleCustomerID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oracle Customer ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OracleCustomerNumber__c</fullName>
        <formula>Account.OracleCustomerNumber__c</formula>
        <label>Oracle Customer Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationBusinessLine__c</fullName>
        <formula>OrganizationString__r.BusinessLineName__c</formula>
        <label>Organization Business Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationRegion__c</fullName>
        <formula>OrganizationString__r.Region__c</formula>
        <label>Organization Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationString__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization String</label>
        <referenceTo>OrganizationString__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OtherState__c</fullName>
        <formula>Other_State_Province_Emerate__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OtherState</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_City__c</fullName>
        <label>Other City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Country_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Other Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Country__c</fullName>
        <label>Other Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Indian Ocean Territory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brunei Darussalam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burkina Faso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burundi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambodia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_State_Province_Emerate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Other State/Province/Emirate</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>State_Province_Emirate__c.Country__c</field>
                <operation>equals</operation>
                <valueField>$Source.Other_Country_Lookup__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>State_Province_Emirate__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_State__c</fullName>
        <label>Other State</label>
        <picklist>
            <picklistValues>
                <fullName>Aguascalientes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alberta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baja California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baja California Sur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campeche</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chiapas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chihuahua</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coahuila</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colima</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distrito Federal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Durango</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guanajuato</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guerrero</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hidalgo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Street_1__c</fullName>
        <description>This field will go away after migration</description>
        <inlineHelpText>This field will go away after migration</inlineHelpText>
        <label>Other Street 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Street_2__c</fullName>
        <description>This field will go away after migration</description>
        <inlineHelpText>This field will go away after migration</inlineHelpText>
        <label>Other Street 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Street__c</fullName>
        <description>Street address if different from Account address</description>
        <inlineHelpText>Street address if different from Account address; multiple lines may be entered</inlineHelpText>
        <label>Other Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Zip__c</fullName>
        <label>Other Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_ID__c</fullName>
        <label>Person ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreferredMethod__c</fullName>
        <label>Preferred Method</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoleType__c</fullName>
        <label>Role Type</label>
        <picklist>
            <picklistValues>
                <fullName>Accounts Payable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SS_Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Search_Name__c</fullName>
        <formula>FirstName + &apos; &apos; +  LastName</formula>
        <label>Search Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Services_Bought_Used__c</fullName>
        <inlineHelpText>List services this contact is responsible for buying (contracting)</inlineHelpText>
        <label>Services Bought/Used</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Shared_Services_Is_Executive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the current User a senior executive?  This will affect the prioritization of incoming requests for help.</description>
        <inlineHelpText>Is the current User a senior executive?  This will affect the prioritization of incoming requests for help.</inlineHelpText>
        <label>Shared Services Is Executive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site</label>
        <referenceTo>Site__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>If this person moves to another account: (a) change this field to &quot;No Longer with Client,&quot; (b) enter a note in the &quot;Need to Know&quot; field below, and (c) create a new Contact record under the new account.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No longer with client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee - Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee - Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <inlineHelpText>e.g., PE, P.Eng., Jr.</inlineHelpText>
        <label>Suffix</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field links the Contact to the User object.  This is for the representation of Employees.  Specifically, this is for the Shared Services Case Management.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VendorInactiveDate__c</fullName>
        <label>Vendor Inactive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VendorSiteID__c</fullName>
        <label>Vendor Site ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appirio_core__Last_Access_Date__c</fullName>
        <description>Contains a timestamp for the most recent &quot;login&quot; of this feature user, to be used for PIN expiration.</description>
        <label>Last Access Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>appirio_core__Licensed_Features__c</fullName>
        <label>Licensed Features</label>
        <picklist>
            <picklistValues>
                <fullName>Timecard Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expenses Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Enrollment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resource</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>appirio_core__PIN__c</fullName>
        <description>Used to authenticate feature-only users to the Sites pages</description>
        <label>PIN</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>iContactforSF__iContact_Contact_Id__c</fullName>
        <description>The iContact Contact Id associated with this Contact.</description>
        <label>iContact Contact Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>psa_report__Hist_Sch_Utilization__c</fullName>
        <formula>(  pse__Hist_Sch_Utilization_Billable_Hours__c  +  pse__Hist_Sch_Utilization_Credited_Hours__c  )  /  (  pse__Historical_Utilization_Calendar_Hours__c  -  pse__Hist_Sch_Utilization_Excluded_Hours__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hist Sch Utilization</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>psa_report__Resource_Name__c</fullName>
        <formula>FirstName &amp;&quot; &quot;&amp; LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resource Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Action_Calculate_Utilization__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Action: Calculate Utilization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Action_Update_Current_Time_Period__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Action: Update Current Time Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Actuals_Last_Update_Date__c</fullName>
        <label>Actuals: Last Update Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__Actuals_Last_Updated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Actuals: Last Updated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Allow_Timecards_Without_Assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this if resource should be treated as  &apos;Global&apos; Resources.
&apos;Global&apos; Resources can enter time for any Project, even if that Project normally requires Assignments for Time Entry.</description>
        <inlineHelpText>Check this if resource should be treated as  &apos;Global&apos; Resources.
&apos;Global&apos; Resources can enter time for any Project, even if that Project normally requires Assignments for Time Entry.</inlineHelpText>
        <label>Allow Timecards Without Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Billable_External_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Billable Hours (External)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Internal_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Billable Hours (Internal)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Billed__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Billed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Billings__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Billings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Bookings__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Bookings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Credited_Non_Billable_Internal_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Credited Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Current_Time_Period_End_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Current Time Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Current_Time_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Time Period</label>
        <referenceTo>pse__Time_Period__c</referenceTo>
        <relationshipLabel>Current Time Period For Resources</relationshipLabel>
        <relationshipName>CurrentTimePeriodForResources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Daily_Default_Cost_Rate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Cost Rate is Daily Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Default_Cost_Rate__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Default Cost Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Exclude_From_Missing_Timecards__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether to exclude this resource from missing timecard reports</description>
        <label>Exclude From Missing Timecards</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Exclude_From_Time_Calculations__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether the user should be excluded from timecard calculations like utilization</inlineHelpText>
        <label>Exclude From Time Calculations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Exclude_from_Resource_Planner__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether to exclude this resource from the resource planner.</inlineHelpText>
        <label>Exclude from Resource Planner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Excluded_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Excluded Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Expense_Budget__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Expense Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>